--- a/microservice-consumer/microservice-consumer-engine/src/main/resources/application.yml
+++ b/microservice-consumer/microservice-consumer-engine/src/main/resources/application.yml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: @pom.name@
+  sleuth:
+      web:
+        client:
+          enabled: true
+      sampler:
+        probability: 1.0  #default:0.1, it is portion of sample. 1.0 means grab all sample.
+  zipkin:
+    base-url: http://localhost:9411
+
 
 eureka:
   client:
@@ -11,6 +20,13 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
+
 feign:
   hystrix:
     enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
