--- a/microservice-provider/microservice-provider-creeper/src/main/resources/application.yml
+++ b/microservice-provider/microservice-provider-creeper/src/main/resources/application.yml
@@ -4,6 +4,14 @@ server:
 spring:
   application:
     name: @pom.name@
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      probability: 1.0  #default:0.1, it is portion of sample. 1.0 means grab all sample.
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:
   client:
