--- a/microservice-provider/microservice-provider-searcher/src/main/resources/application.yml
+++ b/microservice-provider/microservice-provider-searcher/src/main/resources/application.yml
@@ -1,9 +1,18 @@
 server:
   port: 8804
 
+
 spring:
   application:
     name: @pom.name@
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      probability: 1.0  #default:0.1, it is portion of sample. 1.0 means grab all sample.
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:
   client:
@@ -11,3 +20,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
