--- a/microservice-gateway/src/main/resources/application.yml
+++ b/microservice-gateway/src/main/resources/application.yml
@@ -1,13 +1,7 @@
 spring:
-  main:
-    allow-bean-definition-overriding: true
   application:
     name: @pom.name@
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
+#    开启通过服务中心自动根据serviceId创建路由
 
 server:
   port: 10000
@@ -15,7 +9,7 @@ server:
 eureka:
   client:
     service-url:
-      defualtZone: http://localhost:8761/eureka/
+      defualtZone: http://192.168.92.2:8761/eureka/
 
 logging:
   level:
